exercises/00-networking/01-linkerd/manifests/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  labels:
    name: debug
  annotations:
        linkerd.io/inject: "enabled"
  namespace: linkerdapp
spec:
  containers:
  - name: debug
    image: praqma/network-multitool:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
