exercises/00-networking/01-linkerd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: superapi
  template:
    metadata:
      labels:
        app: superapi
      annotations:
        linkerd.io/inject: "enabled"
    spec:
      containers:
      - name: superapi
        image: ghcr.io/gbaeke/super:1.0.7
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
